--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2",
-    "react-toastify": "^10.0.6"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
